[project]
name        = "farmer"
description = "A sheep farmer who supplies wool"
version     = "0.1.0"

dependencies = [
  "typing-extensions ~= 4.0 ; python_version < '3.10'",
  "fastapi           ~= 0.0",
  "uvicorn[standard] ~= 0.0",
]
[project.optional-dependencies]
test = [
  "pytest            ~= 7.0",
  "pytest-asyncio    ~= 0.0",
  "httpx             ~= 0.0"
]
dev = [
  "pact-python[types]",
  "pact-python[test]",
  "black          ==23.12.1",
  "flake8         ~= 7.0",
  "isort          ~= 5.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
asyncio_mode = "strict"
testpaths = [
  "tests",
]
